--- a/frontend/public/assets/content/politica/1-ciencia-politica/1.md
+++ b/frontend/public/assets/content/politica/1-ciencia-politica/1.md
@@ -12,21 +12,21 @@ Pág 13
 
 No conjunto de atividades que têm como referência a polis, este pode ser o sujeito ou o objeto da ação. A polis é o sujeito pelo fato de pertencerem “à esfera da política atos como o de comandar (ou proibir) algo, [...] o exercício de um domínio exclusivo sobre um determinado território, o de legislar com normas válidas erga omnes, o de extrair e distribuir recursos de um setor para outro da sociedade e assim por diante”. 
 
-Aristóteles considerava o homem um zoon politikón (animal político), definindo-o assim: só “porque o homem vive na polis — e porque a polis vive nele — que o homem se realiza como tal”. Ao utilizar “animal político” para definir o homem, Aristóteles exprimia a concepção grega da vida. “Uma concepção segundo a qual a polis era a unidade constitutiva indecomponível e a dimensão suprema da existência. No viver “político” e na 'politicidade” os gregos viam não uma parte, ou aspecto, da vida, mas seu todo, sua essência.” Por outro lado, “o homem “não político' era um ser deficiente, um ídion, um ser carente (significado original do nosso termo “idiota”, cuja insuficiência consistia justamente em ter perdido (ou em não haver adquirido) a dimensão e a plenitude da simbiose com sua polis”.
+Aristóteles considerava o homem um zoon politikón (animal político), definindo-o assim: só “porque o homem vive na polis — e porque a polis vive nele — que o homem se realiza como tal”. Ao utilizar “animal político” para definir o homem, Aristóteles exprimia a concepção grega da vida. “Uma concepção segundo a qual a polis era a unidade constitutiva indecomponível e a dimensão suprema da existência. No viver “político” e na "politicidade” os gregos viam não uma parte, ou aspecto, da vida, mas seu todo, sua essência. Por outro lado, o homem “não político" era um ser deficiente, um ídion, um ser carente (significado original do nosso termo “idiota”, cuja insuficiência consistia justamente em ter perdido (ou em não haver adquirido) a dimensão e a plenitude da simbiose com sua polis”.
 
 O conceito de política como práxis humana está intimamente relacionado com a noção de poder. Isto é, quem faz política busca ou exerce o poder — o homem exercendo poder sobre outro homem, ou sobre determinado grupo social — com o objetivo de obter alguma vantagem pessoal ou coletiva. Como afirma Weber: “Todo homem, que se entrega à política, aspira ao poder — seja porque o considere como instrumento a serviço da consecução de outros fins, ideais ou egoístas, seja porque deseje o poder “pelo poder”, para gozar do sentimento de prestígio que ele confere.”
 
-O filósofo alemão, e influente pensador político, Carl Schmitt concebeu uma ideia maniqueísta da política, reduzindo-a à distinção amigo-inimigo. Para ele, “o conceito de Estado supõe o de político”. O Estado, para ele, “é o status político de um povo organizado no interior de fronteiras territoriais”. Para se obter uma determinação do conceito de político, deve-se primeiramente identificar quais são as categorias especificamente políticas. “Pois o político tem seus próprios critérios, estes operam de maneira muito peculiar em relação com os diversos domínios mais ou menos independentes do pensar e fazer humanos”, em particular em relação à moral, ao estético e ao econômico.
+O filósofo alemão, e influente pensador político, **Carl Schmitt**📌 concebeu uma **ideia maniqueísta da política**, reduzindo-a à distinção amigo-inimigo. Para ele, “o conceito de Estado supõe o de político”. O Estado, para ele, “é o status político de um povo organizado no interior de fronteiras territoriais”. Para se obter uma determinação do conceito de político, deve-se primeiramente identificar quais são as categorias especificamente políticas. “Pois o político tem seus próprios critérios, estes operam de maneira muito peculiar em relação com os diversos domínios mais ou menos independentes do pensar e fazer humanos”, em particular em relação à moral, ao estético e ao econômico.
 
-No campo da moral, para Schmitt, as categorias específicas são o bem e o mal; no estético, o belo e o feio; no econômico, o benéfico e o prejudicial (ou o rentável e o não rentável). “Pois bem, a distinção política específica, aquela à qual podem reconduzir-se todas as ações e motivos políticos, é a distinção amigo e inimigo.” Estas categorias específicas não oferecem, “de imediato, uma definição exaustiva do político, nem uma descrição de seu conteúdo, mas sim uma determinação de seu conceito no sentido de um critério”. Este critério pode sustentar- -se tanto na teoria como na prática, sem necessidade de aplicar simultaneamente todas aquelas outras distinções morais, estéticas, econômicas e outras.”
+No campo da moral, para Schmitt, as categorias específicas são o bem e o mal; no estético, o belo e o feio; no econômico, o benéfico e o prejudicial (ou o rentável e o não rentável). “Pois bem, a distinção política específica, aquela à qual podem reconduzir-se todas as ações e motivos políticos, é a distinção amigo e inimigo.” Estas categorias específicas não oferecem, “de imediato, uma definição exaustiva do político, nem uma descrição de seu conteúdo, mas sim uma determinação de seu conceito no sentido de um critério”. Este critério pode sustentar-se tanto na teoria como na prática, sem necessidade de aplicar simultaneamente todas aquelas outras distinções morais, estéticas, econômicas e outras.
 
 Pág 14
 
-Para Schmitt, “o inimigo político não necessita ser moralmente mau, nem esteticamente feio”, não constitui problema se tornar-se um concorrente na economia, e até poderá ser vantajoso fazer negócios com ele. O inimigo “simplesmente é o outro, o estranho, e para determinar sua essência basta que seja existencialmente distinto e estranho em um sentido particularmente intensivo”.º Este raciocínio de Schmitt tem várias implicações; por exemplo, induz a unidade do Estado visando ao enfrentamento do inimigo externo. Nesse contexto a pluralidade de opiniões é vista como prejudicial à união de todos (amigos) contra o inimigo comum. Pois a política é entendida como oposição ao outro, o estranho, sendo inaceitável uma posição em que se questione esse posicionamento, como alternativa à concepção binária de política. Assim, quem não é amigo só pode ser inimigo, e passa a ser perseguido. Essa visão maniqueísta da política o levou a identificar-se com o nazismo, tornando-se um dos seus ideólogos.
+Para Schmitt, “o inimigo político não necessita ser moralmente mau, nem esteticamente feio”, não constitui problema se tornar-se um concorrente na economia, e até poderá ser vantajoso fazer negócios com ele. O inimigo “simplesmente é o outro, o estranho, e para determinar sua essência basta que seja existencialmente distinto e estranho em um sentido particularmente intensivo”. Este raciocínio de Schmitt tem várias implicações; por exemplo, induz a unidade do Estado visando ao enfrentamento do inimigo externo. Nesse contexto a pluralidade de opiniões é vista como prejudicial à união de todos (amigos) contra o inimigo comum. Pois a política é entendida como oposição ao outro, o estranho, sendo inaceitável uma posição em que se questione esse posicionamento, como alternativa à concepção binária de política. Assim, quem não é amigo só pode ser inimigo, e passa a ser perseguido. **Essa visão maniqueísta da política o levou a identificar-se com o nazismo, tornando-se um dos seus ideólogos.**
 
-Outro autor, Parsons, destacando a relação da política com o poder, considera “o aspecto político de um sistema social como centralizado na geração e na distribuição do poder”.
+Outro autor, **Parsons**📌, destacando a relação da política com o poder, considera **“o aspecto político de um sistema social como centralizado na geração e na distribuição do poder”**.
 
-Para Karl Deutsch a política é, “em certo sentido, a tomada de decisões através de meios públicos”, em contraste com a tomada de decisões pessoais e com as decisões econômicas. E, assim, “ela preocupa-se fundamentalmente com o governo, ou seja, com a direção e autoadministração de vastas comunidades de povos”. A palavra política enfatiza “o processo de tomada de decisões no que diz respeito a atividades públicas ou produtos: acerca do que é feito, de quem o recebe e o quê”. Para ele qualquer comunidade maior do que a família contém um elemento de política.
+Para **Karl Deutsch**📌 a política é, **“em certo sentido, a tomada de decisões através de meios públicos”**, em contraste com a tomada de decisões pessoais e com as decisões econômicas. E, assim, “ela preocupa-se fundamentalmente com o governo, ou seja, com a direção e autoadministração de vastas comunidades de povos”. A palavra política enfatiza “o processo de tomada de decisões no que diz respeito a atividades públicas ou produtos: acerca do que é feito, de quem o recebe e o quê”. Para ele qualquer comunidade maior do que a família contém um elemento de política.
 
 A política pode, também, ser definida “como a atividade através da qual são conciliados os diferentes interesses, dentro de uma determinada unidade de governo, dando a cada um deles uma participação no poder, proporcional à sua importância para o bem-estar e a sobrevivência de toda a comunidade”. Nesse sentido, pode-se afirmar que a política “é uma forma de governar nas sociedades divididas, sem o uso indevido da violência”. Existem “algumas sociedades com vários interesses diferentes e pontos de vista divergentes”, e eticamente “a conciliação é preferível à coerção”. Nessa concepção, o governo pacífico é melhor que “o domínio violento, e que a ética política não é um tipo inferior de atividade ética, senão um nível de vida ética completamente autocontida e plenamente justificável. A política não é justamente um mal necessário, senão um bem realístico”.
 
