--- a/frontend/public/assets/content/politica/1-ciencia-politica/1.md
+++ b/frontend/public/assets/content/politica/1-ciencia-politica/1.md
@@ -1,6 +1,6 @@
 # Capítulo 1 - INTRODUÇÃO À CIÊNCIA POLÍTICA
 
-Pág 12
+**Pág 12**
 
 A ciência política é uma ciência social que estuda o exercício, a distribuição e a organização do poder na sociedade. Como ciência social, procura estudar os fatos políticos, que envolvem tanto acontecimentos e processos políticos, como o comportamento político que se expressa concretamente na interação social. Dentre outros temas, descreve, por exemplo, os processos eleitorais, a resposta da população às decisões políticas tomadas pelas autoridades, a constituição e a dinâmica dos partidos políticos e dos grupos de pressão, os impactos das mudanças políticas e suas consequências, a organização das diferentes formas de governo, as funções exercidas pelas autoridades no interior do Estado, o processo político da tomada de decisões que afetam a sociedade global, as diferentes relações de poder entre indivíduos diversos, a ação dos grupos de influência, a evolução do pensamento político.
 
@@ -8,7 +8,7 @@ A ciência política é uma ciência social que estuda o exercício, a distribui
 
 A definição clássica de política foi legada pelos antigos gregos através da obra de Aristóteles Política. O conceito de política é derivado do adjetivo originado de polis (politikós), que significa tudo que se refere à cidade e, consequentemente, o que é urbano, civil, público e até mesmo sociável e social. Ou, dito de outro modo, o conceito de política “é habitualmente empregado para indicar a atividade ou conjunto de atividades que têm de algum modo, como termo de referência, a polis, isto é, o Estado”.
 
-Pág 13
+**Pág 13**
 
 No conjunto de atividades que têm como referência a polis, este pode ser o sujeito ou o objeto da ação. A polis é o sujeito pelo fato de pertencerem “à esfera da política atos como o de comandar (ou proibir) algo, [...] o exercício de um domínio exclusivo sobre um determinado território, o de legislar com normas válidas erga omnes, o de extrair e distribuir recursos de um setor para outro da sociedade e assim por diante”. 
 
@@ -20,7 +20,7 @@ O filósofo alemão, e influente pensador político, **Carl Schmitt**📌 conceb
 
 No campo da moral, para Schmitt, as categorias específicas são o bem e o mal; no estético, o belo e o feio; no econômico, o benéfico e o prejudicial (ou o rentável e o não rentável). “Pois bem, a distinção política específica, aquela à qual podem reconduzir-se todas as ações e motivos políticos, é a distinção amigo e inimigo.” Estas categorias específicas não oferecem, “de imediato, uma definição exaustiva do político, nem uma descrição de seu conteúdo, mas sim uma determinação de seu conceito no sentido de um critério”. Este critério pode sustentar-se tanto na teoria como na prática, sem necessidade de aplicar simultaneamente todas aquelas outras distinções morais, estéticas, econômicas e outras.
 
-Pág 14
+**Pág 14**
 
 Para Schmitt, “o inimigo político não necessita ser moralmente mau, nem esteticamente feio”, não constitui problema se tornar-se um concorrente na economia, e até poderá ser vantajoso fazer negócios com ele. O inimigo “simplesmente é o outro, o estranho, e para determinar sua essência basta que seja existencialmente distinto e estranho em um sentido particularmente intensivo”. Este raciocínio de Schmitt tem várias implicações; por exemplo, induz a unidade do Estado visando ao enfrentamento do inimigo externo. Nesse contexto a pluralidade de opiniões é vista como prejudicial à união de todos (amigos) contra o inimigo comum. Pois a política é entendida como oposição ao outro, o estranho, sendo inaceitável uma posição em que se questione esse posicionamento, como alternativa à concepção binária de política. Assim, quem não é amigo só pode ser inimigo, e passa a ser perseguido. **Essa visão maniqueísta da política o levou a identificar-se com o nazismo, tornando-se um dos seus ideólogos.**
 
@@ -30,7 +30,7 @@ Para **Karl Deutsch**📌 a política é, **“em certo sentido, a tomada de dec
 
 A política pode, também, ser definida *“como a atividade através da qual são conciliados os diferentes interesses, dentro de uma determinada unidade de governo, dando a cada um deles uma participação no poder, proporcional à sua importância para o bem-estar e a sobrevivência de toda a comunidade”*. Nesse sentido, pode-se afirmar que a política “é uma forma de governar nas sociedades divididas, sem o uso indevido da violência”. Existem “algumas sociedades com vários interesses diferentes e pontos de vista divergentes”, e eticamente “a conciliação é preferível à coerção”. Nessa concepção, o governo pacífico é melhor que “o domínio violento, e que a ética política não é um tipo inferior de atividade ética, senão um nível de vida ética completamente autocontida e plenamente justificável. A política não é justamente um mal necessário, senão um bem realístico”.
 
-Pág 15 
+**Pág 15**
 
 Para **Duverger**📌, *“a própria essência da política, sua natureza especial, sua verdadeira significação é que ela é, sempre e em todo lugar, ambivalente”*. Segundo o autor, apresenta duas faces, pois por um lado “O Estado — e, de modo mais geral, o poder instituído em uma sociedade — é sempre e em todo lugar, ao mesmo tempo, instrumento de dominação de certas classes sobre as outras” e também, por outro lado, “um meio de assegurar uma certa ordem social, uma certa integração de todos na coletividade para o bem comum”. Considera que as duas coexistem sempre, variando somente a proporção de um ou outro elemento, segundo as épocas, as circunstâncias e os países.
 
@@ -42,7 +42,7 @@ Nesse contexto, designa todo o complexo de atividades que se realizam na prátic
 
 Para o jurista alemão **Hermann Heller**📌, o *“conceito de político é muito mais amplo do que o do estatal”*, pois “existiram atividades políticas e formas de atividade política antes de haver o Estado, do mesmo modo que existem ainda hoje, **grupos políticos dentro dos Estados e entre os Estados**”. No entanto, argumenta que a linguagem usual ampliou o sentido dos termos política e político de forma considerável. Podemos encontrar referências a uma política eclesiástica, militar, econômica, organizacional etc., não havendo referência “só ao Estado e a outras instituições políticas, mas também a particulares como suportes de tal política”. O que todas essas formas de “política” têm em comum é “desenvolver e aplicar poder social organizado, ou seja, que o seu poder nasce e mantém-se mediante a cooperação humana dirigida por uma ordenação regular comum, na qual determinados indivíduos cuidam do estabelecimento e segurança da ordenação, assim como da atuação unitária do poder de tal modo concentrado”.
 
-Pág 16
+**Pág 16**
 
 No entanto, afirma **Heller**, ao poder organizado e exercido por órgãos especiais de uma igreja, de uma corporação econômica ou mesmo de uma organização militar enquanto tal, não damos o nome de político.
 
@@ -56,7 +56,7 @@ A política, assim, inclui diferentes significados, mas todos de algum modo rela
 
 No idioma inglês, por exemplo, podemos identificar vários significados para o termo política (o que não ocorre em português, por exemplo). Esse idioma utiliza três palavras distintas para expressar essas diferenças: policy, politics, polity. São três concepções de política que revelam o maior grau de amadurecimento dos estudos de ciência política, em particular, nos Estados Unidos. Esses diferentes termos apresentam em linhas gerais o seguinte significado:
 
-Pág 17
+**Pág 17**
 
 1. Policy é entendido como ação do governo. Constitui atividade social que se propõe a assegurar, por meio da coerção física, baseada no direito, a segurança externa e a solidariedade interna de um território específico garantindo a ordem e providenciando ações que visam a atender às necessidades da sociedade. A política neste sentido é executada por um autoridade legitimada, que busca efetuar uma realocação dos recursos escassos da sociedade. A política neste caso pode ser adjetivada em função do campo de sua atuação ou de especialização da agência governamental encarregada de executá-la. Desse modo, podemos nos referir a política de educação, saúde, assistência social, agrícola, fiscal etc. São todas produtos de ações que têm efeitos no sistema político e social.
 
@@ -70,7 +70,7 @@ Foram decisões políticas que provocaram os grandes eventos marcantes do sécul
 
 Neste século XXI que está apenas começando, a política se insere em todos os aspectos da vida humana. O terrorismo, o aquecimento global, a diminuição da biodiversidade, a inserção social de imigrantes, a melhoria da qualidade de vida dos idosos, o aumento da inclusão social, entre tantos outros problemas, antes de serem ambientais, sociais ou culturais são essencialmente políticos, pois dependem de decisões tomadas no âmbito dos Estados, ou em fóruns internacionais em que estes continuam a ter total relevância e influência.
 
-Pág 18
+**Pág 18**
 
 Enfim, mais do que nunca torna-se necessário que a política seja compreendida pelo homem comum, tornando mais do que nunca atual a poesia de Brecht “O analfabeto político”, que demonstra um tipo de ignorância que pode ser fatal na melhoria das condições de vida de cada cidadão. Nesse poema Brecht coloca que:
 
@@ -84,7 +84,7 @@ E nesse sentido que “a política merece ser altamente louvada”. Pois ela dev
 
 ## 1.2 O objeto da ciência política
 
-Pág 19 
+**Pág 19**
 
 Os primeiros autores que se preocuparam com a política, dos quais temos registros históricos, foram os gregos, com destaque para **Platão**📌 (427-347 a.C.) e **Aristóteles**📌 (384-322 a.C.), que desenvolveram estudos sobre o governo da comunidade. A eles podem-se somar inúmeros outros considerados clássicos em ciência política, como **Nicolau Maquiavel**📌 (1469-1527), **Thomas Hobbes**📌 (1588-1679), **John Locke**📌 (1632-1704), **Alexis de Tocqueville**📌 (1805-1859) e **Karl Marx**📌 (1818-1883), entre outros.
 
@@ -98,7 +98,7 @@ Outra importante contribuição à teoria política veio de Karl Marx (18181883)
 
 Desse modo, as relações de produção determinam o modo pelo qual a sociedade se organiza para utilizar as forças produtivas, e ao mesmo tempo são criadas diferentes estruturas políticas baseadas em classes sociais, que servirão de instrumento de dominação de uma pela outra. Para Marx, as mudanças sociais e históricas ocorrem, principalmente, pelo desenvolvimento da infraestrutura econômica, e não tanto devido à superestrutura política e ideológica. Na análise da realidade social, levou ao extremo esse determinismo do econômico. Chegando ao ponto de eximir a responsabilidade dos indivíduos nas relações de classe (pois só interessam na medida em que representam categorias econômicas), afirmava que: “minha concepção do desenvolvimento da formação econômico-social como um processo histórico-natural exclui, mais do que qualquer outra, a responsabilidade do indivíduo por relações, das quais ele continua sendo, socialmente, criatura, por mais que, subjetivamente, se julgue acima delas”.
 
-Pág 20 
+**Pág 20**
 
 Conforme **Duverger**📌, há diferentes concepções sobre o objeto de estudo da ciência política. Entre as grandes posições-limite há alguns que defendem que a ciência política é a “ciência do poder”, enquanto para outros é a “ciência do Estado”, havendo diversas posições intermediárias. O que há de comum entre todas as definições de ciência política é a concordância de que o estudo do poder é a questão central da disciplina.”
 
@@ -108,7 +108,7 @@ Procurando uma definição para a ciência política, Duverger remete ao poder, 
 
 Buscando interpretar o real papel desempenhado pela ciência política, **Hermann Heller**📌 afirma que ela só pode ter função de ciência caso se admita “que é capaz de nos oferecer uma descrição, interpretação e crítica dos fenômenos políticos que sejam verdadeiras e obrigatórias”. Ao não se aceitar isso, “uma declaração sobre qualquer processo político pode, em verdade, desempenhar a função prática de servir como arma, na luta política, para a conquista ou defesa das posições de dominação, mas não cumpre uma missão teórica”.
 
-Pág 21
+**Pág 21**
 
 **Georges Burdeau**📌, por sua vez, considera que o objeto da ciência política é a política, tendo esta como foco central o poder. Em seus termos, afirma que “é a ciência que se propõe estudar as relações de autoridade e obediência e seus efeitos sobre o comportamento dos homens, para nos proporcionar uma explicação coerente e inteligível da estrutura e do dinamismo das sociedades políticas”.
 
