--- a/frontend/public/assets/content/politica/1-ciencia-politica/1.md
+++ b/frontend/public/assets/content/politica/1-ciencia-politica/1.md
@@ -76,6 +76,7 @@ Enfim, mais do que nunca torna-se necessário que a política seja compreendida 
 
 *“O pior analfabeto é o analfabeto político, ele não ouve, não fala, nem participa dos acontecimentos políticos*. Ele ***não sabe que o custo da vida**, o preço do feijão, do peixe, da farinha, do aluguel, do sapato e do remédio **dependem das decisões políticas**. O analfabeto político é tão burro que se orgulha e estufa o peito dizendo que odeia a política. Não sabe o imbecil que, da sua ignorância política nasce a prostituta, o menor abandonado, e o pior de todos os bandidos, que é o político vigarista, pilantra, corrupto e lacaio das empresas nacionais e multinacionais.”
 
+
 E nesse sentido que “a política merece ser altamente louvada”. Pois ela deve “constituir a preocupação do homem livre, e sua existência é a verificação da liberdade”.
 
 **Max Weber**📌, ao encerrar uma palestra, mostrou de forma magnífica a importância e o significado da política para os homens. Devido a sua atualidade, a transcrevemos na integra:
@@ -182,7 +183,7 @@ Para que a ciência política seja uma verdadeira ciência, segundo Heller, ela 
 
 Do ponto de vista científico a posição de Heller indica que a ciência política e a teoria jurídica do Estado não podem nem devem existir em contraposição uma com a outra, mas conjuntamente. Se a ciência política quer ver sua principal tarefa na análise científica como o modo de operar das instituições políticas, e mais ainda, a pesquisa do conjunto do processo de governo e da formação da vontade, nada pode fazer sem a consideração do direito.
 
-Não sendo a ciência política um que-fazer sociológico puro, nem uma relação puramente jurídica, nem uma revelação das causalidades históricas, não deve restringir-se a aplicar métodos isolados, mas todo método que seja útil para interpretar essa realidade que se chama política. Esta adequação ocorreu com a teoria do Estado quando, liberada do positivismo, admitiu o contexto político- -social, sendo obrigada a explicar, por exemplo, o “Estado”, a “Constituição” ou a “liberdade de opinião” em seu contexto real. Assim, definitivamente, a política tem, como o jurídico, caráter normativo, mas “em seu esforço teórico tem que transcender as eventuais normas constitucionais de um Estado e obter pontos de vista normativos que sejam aplicáveis a todos os tempos e a todo regime”
+Não sendo a ciência política um que-fazer sociológico puro, nem uma relação puramente jurídica, nem uma relação das causalidades históricas, não deve restringir-se a aplicar métodos isolados, mas todo método que seja útil para interpretar essa realidade que se chama política. Esta adequação ocorreu com a teoria do Estado quando, liberada do positivismo, admitiu o contexto político-social, sendo obrigada a explicar, por exemplo, o “Estado”, a “Constituição” ou a “liberdade de opinião” em seu contexto real. Assim, definitivamente, a política tem, como o jurídico, caráter normativo, mas “em seu esforço teórico tem que transcender as eventuais normas constitucionais de um Estado e obter pontos de vista normativos que sejam aplicáveis a todos os tempos e a todo regime”
 
 **Pág 25**
 
@@ -194,7 +195,7 @@ A identidade entre as duas disciplinas está dada e se torna evidente se levamos
 
 ## 1.4 O sistema político
 
-A utilização do conceito de “sistema político — em lugar de outros como “governo”, “nação” ou “Estado” reflete uma nova maneira de encarar os fenômenos políticos”, e chegou a ser utilizado tão amplamente porque dirige a atenção para toda a gama de atividades políticas de uma sociedade. De modo geral, “o sistema político é associado ao uso da força física legítima nas sociedades” e “só as autoridades políticas têm certo direito, geralmente aceito, de usar a força e exigir obediência com base nela”. Quando se fala em sistema político, incluem-se “todas as interações que afetam ou ameaçam o uso da força física legítima. Os sistemas políticos incluem não somente organizações governamentais como os legislativos, cortes de justiça e órgãos administrativos, mas todas as estruturas, inclusive grupos familiares e sociais, em seus aspectos políticos”.
+A utilização do conceito de “sistema político — em lugar de outros como “governo”, “nação” ou “Estado” reflete uma nova maneira de encarar os fenômenos políticos”, e chegou a ser utilizado tão amplamente porque dirige a atenção para toda a gama de atividades políticas de uma sociedade. De modo geral, **“o sistema político é associado ao uso da força física legítima nas sociedades”** e “só as autoridades políticas têm certo direito, geralmente aceito, de usar a força e exigir obediência com base nela”. Quando se fala em sistema político, incluem-se “todas as interações que afetam ou ameaçam o uso da força física legítima. Os sistemas políticos **incluem não somente organizações governamentais como os legislativos, cortes de justiça e órgãos administrativos, mas todas as estruturas, inclusive grupos familiares e sociais, em seus aspectos políticos”**.
 
 **Pág 26**
 
